metodos para modificar listos, falta implementarlos